--- a/project-1/index.html
+++ b/project-1/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id=media>
-    <img src="im/eye.png" alt="See the Beauty of the Pandemic From My Eyes">
+    <img src="image/eye.png" alt="See the Beauty of the Pandemic From My Eyes">
   </div>
 
   <div>
