--- a/project-1/index.html
+++ b/project-1/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <title>Links Example</title>
+    <link rel="stylesheet" type="text/css" href="project-1/style.css" />
+</head>
+    
 <head>
     <title>Beauty of the World From Jiacheng's Eyes</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
@@ -8,12 +12,13 @@
 </head>
 
 <body>
-  <div id=media>
-    <img src="image/eye.png" alt="See the Beauty of the Pandemic From My Eyes">
+  <div id=media class="hero">
+     <a href="page-2.html"> 
+    <img src="image/eyebw.png" width="600" height="215.5" alt="See the Beauty of the Pandemic From My Eyes"> 
+      </a>
   </div>
-
-  <div>
-      <a href="file:///Users/cheng/Desktop/USC/Freshman%20Year/IML%20300/iml300/IML300/project-1/index.html">Click here</a>  Why Seeking Beauty?
+<div>
+    <a href="page-2.html"> <h1>Why Seeking Beauty? </h1></a>
       <br>
   </div>
     
