--- a/project-1/page-3.html
+++ b/project-1/page-3.html
@@ -4,9 +4,14 @@
     <title>Links Example</title>
   </head>
   <body>
-    Go  to <a href="page-4.html">the next scene</a>.
+    Go  to ............................................................................................................................................................................................<a href="page-44.html">the next scene</a>.
     <br>
-      <img src="image/WechatIMG22.jpeg">      
+      <a href="page-44.html"><img src="image/WechatIMG22.jpeg" ></a>
      
   </body>
+     <style>
+        body{
+            background-color: black
+        }
+    </style>
 </html>
