--- a/project-1/page-4.html
+++ b/project-1/page-4.html
@@ -9,6 +9,10 @@
     <audio controls autoplay>
       <source src="asset/福禄寿FloruitShow - 兰若度母.mp3" type="audio/mp3">   
     </audio>
-      
+      <style>
+        body{
+            background-image:url(image/lightt.png)
+        }
+    </style>
   </body>
 </html>
