--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 
 <!DOCTYPE html>
 <html>
-
+    
 <head>
-    <title>Jiacheng's Homepage</title>
+    <title>Links Example</title>
+    <link rel="stylesheet" type="text/css" href="project-1/style.css" />
+</head>
+    
+<head>
+    <h1>Jiacheng's Homepage</h1>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
 </head>
 
 <body>
-  <div>
-    <h1>Jiacheng "Tiffany"</h1>
-    <p> This is my website for IML300 class. A little bit about me. </p>
+  <div class="a">
+    <h2>Jiacheng "Tiffany"</h2>
+    <h1> Jiacheng's website for IML300 class</h1>
   </div>
 
   <div>
-      <h1>Exercises</h1>
-      <a href="" target="blank">p5.js sketch 1</a><br>
-      <a href="" target="blank">p5.js sketch 2</a>
+      <h2>Exercises</h2>
+      <h2><a href="" target="blank">p5.js sketch 1</a><br></h2>
+      <h2><a href="" target="blank">p5.js sketch 2</a></h2>
   </div>
   <div>
-      <h1>Presentation</h1>
-      <a href="" target="blank">Pecha Kucha: Lorem Ipsum</a>
+      <h2>Presentation</h2>
+      <h2><a href="" target="blank">Pecha Kucha: Lorem Ipsum</a></h2>
   </div>
 
   <div>
-      <h1>Projects</h1>
+      <h2>Projects</h2>
       <h2>Project 1: HyperNarrative</h2>
-      <a href="" target="blank">Concept</a><br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <h2><a href="projectconcept.html" target="projectconcept.html">Concept</a><br></h2>
+      <h2><a href="prototype.html" target="prototype.html">Prototype</a><br></h2>
+      <h2><a href="project-1/index.html" target="project-1/index.html">Final</a></h2>
       <h2>Project 2: Reimagining The Web</h2>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <h2><a href="" target="">Final: Lorem Ipsum</a></h2>
       <h2>Project 3: Networked Justice</h2>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <h2><a href="" target="blank">Final: Lorem Ipsum</a></h2>
   </div>
 </body>
 </html>
