--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     <h2>Jiacheng "Tiffany"</h2>
     <h1> Jiacheng's website for IML300 class</h1>
   </div>
-
+    
+  <div>
+      <h2>Question Marks</h2>
+      <h2><a href="questionmarks.html" target="questionmarks.html">Discussion Questions</a><br></h2>
+  </div>
+    
   <div>
       <h2>Exercises</h2>
       <h2><a href="" target="blank">p5.js sketch 1</a><br></h2>
