--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     
   <div>
       <h2>Question Marks</h2>
-      <h2><a href="questionmarks.html" target="questionmarks.html">Discussion Questions</a><br></h2>
+      <h2><a href="project-1/questionmarks.html" target="questionmarks.html">Discussion Questions</a><br></h2>
   </div>
-    
+
   <div>
       <h2>Exercises</h2>
       <h2><a href="" target="blank">p5.js sketch 1</a><br></h2>
