--- a/questionmarks.html
+++ b/questionmarks.html
@@ -22,4 +22,9 @@
 
 <h1>3) How is "flux" created and coded in digital realm? </h1>
     
+      <h2>2020/09/18</h2>
+    <h1>1) Who or which organization will be ethically responsible for coaching and monitoring the counter-surveillance of our biological privacy?</h1>
+    <h1> 2) How will coding protect our biological privacy specifically? </h1>
+    <h1>3) How did culture impact the concept of surveillance as a factor?</h1>
+    
 </html>
