--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2><a href="prototype.html" target="prototype.html">Prototype</a><br></h2>
       <h2><a href="project-1/index.html" target="project-1/index.html">Final</a></h2>
       <h2>Project 2: Reimagining The Web</h2>
-      <h2><a href="" target="">Final: Lorem Ipsum</a></h2>
+      <h2><a href="https://github.com/JiachengTiffanyWang/Project2" target="https://github.com/JiachengTiffanyWang/Project2">Google Chrome Extension: "Daily Positive Affirmations"</a></h2>
       <h2>Project 3: Networked Justice</h2>
       <h2><a href="" target="blank">Final: Lorem Ipsum</a></h2>
   </div>
