--- a/project-1/index.html
+++ b/project-1/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id=media class="hero">
      <a href="page-2.html"> 
-    <img src="image/eyebw.png" width="600" height="215.5" alt="See the Beauty of the Pandemic From My Eyes"> 
+    <img src="image/eyemain.jpg" width="600" height="260.5" alt="See the Beauty of the Pandemic From My Eyes"> 
       </a>
   </div>
 <div>
